// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots TimeRange custom locale 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <label
      class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy FieldLabel-sc-1t1cp4f-1 kbOEDh"
      color="#011e38"
      style="display:block"
    >
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
      >
        <span
          style="font-size:14px;font-weight:600;line-height:1.71428571"
        >
          Time range
        </span>
      </div>
    </label>
    <div
      class="Box-sc-1qu1edy-0 jNUqkq"
      display="inline-flex"
    >
      <div
        class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 lhNPaq"
      >
        <div
          class="nds-time-picker css-2b097c-container"
        >
          <div
            class=" css-1liu8yu-Control"
          >
            <div
              class=" css-7zc8my"
            >
              <div
                class=" css-1uccc91-singleValue"
              >
                12:00 PM
              </div>
              <div
                class="css-17yls17-Input"
              >
                <div
                  class=""
                  style="display:inline-block"
                >
                  <input
                    aria-autocomplete="list"
                    aria-label="Select a start time"
                    autocapitalize="none"
                    autocomplete="off"
                    autocorrect="off"
                    id="react-select-46-input"
                    spellcheck="false"
                    style="box-sizing:content-box;width:1px;label:input;background:0;border:0;font-size:inherit;opacity:1;outline:0;padding:0;color:inherit"
                    tabindex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style="position:absolute;top:0;left:0;visibility:hidden;height:0;overflow:scroll;white-space:pre"
                  />
                </div>
              </div>
            </div>
            <div
              class=" css-1hb7zxy-IndicatorsContainer"
            >
              <span
                class=" css-43ykx9-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                class=" css-1fi275-indicatorContainer"
              >
                <svg
                  aria-hidden="true"
                  class="Icon-fc7twp-0 TimePicker__StyledTimeIcon-sc-1r3kwxy-0 ZhxHr"
                  color="currentColor"
                  fill="currentColor"
                  focusable="false"
                  height="22px"
                  icon="queryBuilder"
                  viewBox="0 0 24 24"
                  width="22px"
                >
                  <path
                    d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 fCVEij"
      >
        <p
          class="Text-sc-1wu7vpu-0 jRzHjr"
          color="currentColor"
          font-size="16px"
        >
          -
        </p>
      </div>
      <div
        class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 lhNPaq"
      >
        <div
          class="nds-time-picker css-2b097c-container"
        >
          <div
            class=" css-1liu8yu-Control"
          >
            <div
              class=" css-7zc8my"
            >
              <div
                class=" css-1uccc91-singleValue"
              >
                01:30 PM
              </div>
              <div
                class="css-17yls17-Input"
              >
                <div
                  class=""
                  style="display:inline-block"
                >
                  <input
                    aria-autocomplete="list"
                    aria-label="Select an end time"
                    autocapitalize="none"
                    autocomplete="off"
                    autocorrect="off"
                    id="react-select-47-input"
                    spellcheck="false"
                    style="box-sizing:content-box;width:1px;label:input;background:0;border:0;font-size:inherit;opacity:1;outline:0;padding:0;color:inherit"
                    tabindex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style="position:absolute;top:0;left:0;visibility:hidden;height:0;overflow:scroll;white-space:pre"
                  />
                </div>
              </div>
            </div>
            <div
              class=" css-1hb7zxy-IndicatorsContainer"
            >
              <span
                class=" css-43ykx9-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                class=" css-1fi275-indicatorContainer"
              >
                <svg
                  aria-hidden="true"
                  class="Icon-fc7twp-0 TimePicker__StyledTimeIcon-sc-1r3kwxy-0 ZhxHr"
                  color="currentColor"
                  fill="currentColor"
                  focusable="false"
                  height="22px"
                  icon="queryBuilder"
                  viewBox="0 0 24 24"
                  width="22px"
                >
                  <path
                    d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TimeRange default 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <label
      class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy FieldLabel-sc-1t1cp4f-1 kbOEDh"
      color="#011e38"
      style="display:block"
    >
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
      >
        <span
          style="font-size:14px;font-weight:600;line-height:1.71428571"
        >
          Time range
        </span>
      </div>
    </label>
    <div
      class="Box-sc-1qu1edy-0 jNUqkq"
      display="inline-flex"
    >
      <div
        class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 lhNPaq"
      >
        <div
          class="nds-time-picker css-2b097c-container"
        >
          <div
            class=" css-1liu8yu-Control"
          >
            <div
              class=" css-7zc8my"
            >
              <div
                class=" css-1yhx6vz-Placeholder"
              >
                HH:MM
              </div>
              <div
                class="css-17yls17-Input"
              >
                <div
                  class=""
                  style="display:inline-block"
                >
                  <input
                    aria-autocomplete="list"
                    aria-label="Select a start time"
                    autocapitalize="none"
                    autocomplete="off"
                    autocorrect="off"
                    id="react-select-38-input"
                    spellcheck="false"
                    style="box-sizing:content-box;width:1px;label:input;background:0;border:0;font-size:inherit;opacity:1;outline:0;padding:0;color:inherit"
                    tabindex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style="position:absolute;top:0;left:0;visibility:hidden;height:0;overflow:scroll;white-space:pre"
                  />
                </div>
              </div>
            </div>
            <div
              class=" css-1hb7zxy-IndicatorsContainer"
            >
              <span
                class=" css-43ykx9-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                class=" css-1fi275-indicatorContainer"
              >
                <svg
                  aria-hidden="true"
                  class="Icon-fc7twp-0 TimePicker__StyledTimeIcon-sc-1r3kwxy-0 ZhxHr"
                  color="currentColor"
                  fill="currentColor"
                  focusable="false"
                  height="22px"
                  icon="queryBuilder"
                  viewBox="0 0 24 24"
                  width="22px"
                >
                  <path
                    d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 fCVEij"
      >
        <p
          class="Text-sc-1wu7vpu-0 jRzHjr"
          color="currentColor"
          font-size="16px"
        >
          -
        </p>
      </div>
      <div
        class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 lhNPaq"
      >
        <div
          class="nds-time-picker css-2b097c-container"
        >
          <div
            class=" css-1liu8yu-Control"
          >
            <div
              class=" css-7zc8my"
            >
              <div
                class=" css-1yhx6vz-Placeholder"
              >
                HH:MM
              </div>
              <div
                class="css-17yls17-Input"
              >
                <div
                  class=""
                  style="display:inline-block"
                >
                  <input
                    aria-autocomplete="list"
                    aria-label="Select an end time"
                    autocapitalize="none"
                    autocomplete="off"
                    autocorrect="off"
                    id="react-select-39-input"
                    spellcheck="false"
                    style="box-sizing:content-box;width:1px;label:input;background:0;border:0;font-size:inherit;opacity:1;outline:0;padding:0;color:inherit"
                    tabindex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style="position:absolute;top:0;left:0;visibility:hidden;height:0;overflow:scroll;white-space:pre"
                  />
                </div>
              </div>
            </div>
            <div
              class=" css-1hb7zxy-IndicatorsContainer"
            >
              <span
                class=" css-43ykx9-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                class=" css-1fi275-indicatorContainer"
              >
                <svg
                  aria-hidden="true"
                  class="Icon-fc7twp-0 TimePicker__StyledTimeIcon-sc-1r3kwxy-0 ZhxHr"
                  color="currentColor"
                  fill="currentColor"
                  focusable="false"
                  height="22px"
                  icon="queryBuilder"
                  viewBox="0 0 24 24"
                  width="22px"
                >
                  <path
                    d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TimeRange default selections 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <label
      class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy FieldLabel-sc-1t1cp4f-1 kbOEDh"
      color="#011e38"
      style="display:block"
    >
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
      >
        <span
          style="font-size:14px;font-weight:600;line-height:1.71428571"
        >
          Time range
        </span>
      </div>
    </label>
    <div
      class="Box-sc-1qu1edy-0 jNUqkq"
      display="inline-flex"
    >
      <div
        class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 lhNPaq"
      >
        <div
          class="nds-time-picker css-2b097c-container"
        >
          <div
            class=" css-1liu8yu-Control"
          >
            <div
              class=" css-7zc8my"
            >
              <div
                class=" css-1uccc91-singleValue"
              >
                12:00 PM
              </div>
              <div
                class="css-17yls17-Input"
              >
                <div
                  class=""
                  style="display:inline-block"
                >
                  <input
                    aria-autocomplete="list"
                    aria-label="Select a start time"
                    autocapitalize="none"
                    autocomplete="off"
                    autocorrect="off"
                    id="react-select-40-input"
                    spellcheck="false"
                    style="box-sizing:content-box;width:1px;label:input;background:0;border:0;font-size:inherit;opacity:1;outline:0;padding:0;color:inherit"
                    tabindex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style="position:absolute;top:0;left:0;visibility:hidden;height:0;overflow:scroll;white-space:pre"
                  />
                </div>
              </div>
            </div>
            <div
              class=" css-1hb7zxy-IndicatorsContainer"
            >
              <span
                class=" css-43ykx9-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                class=" css-1fi275-indicatorContainer"
              >
                <svg
                  aria-hidden="true"
                  class="Icon-fc7twp-0 TimePicker__StyledTimeIcon-sc-1r3kwxy-0 ZhxHr"
                  color="currentColor"
                  fill="currentColor"
                  focusable="false"
                  height="22px"
                  icon="queryBuilder"
                  viewBox="0 0 24 24"
                  width="22px"
                >
                  <path
                    d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 fCVEij"
      >
        <p
          class="Text-sc-1wu7vpu-0 jRzHjr"
          color="currentColor"
          font-size="16px"
        >
          -
        </p>
      </div>
      <div
        class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 lhNPaq"
      >
        <div
          class="nds-time-picker css-2b097c-container"
        >
          <div
            class=" css-1liu8yu-Control"
          >
            <div
              class=" css-7zc8my"
            >
              <div
                class=" css-1uccc91-singleValue"
              >
                01:30 PM
              </div>
              <div
                class="css-17yls17-Input"
              >
                <div
                  class=""
                  style="display:inline-block"
                >
                  <input
                    aria-autocomplete="list"
                    aria-label="Select an end time"
                    autocapitalize="none"
                    autocomplete="off"
                    autocorrect="off"
                    id="react-select-41-input"
                    spellcheck="false"
                    style="box-sizing:content-box;width:1px;label:input;background:0;border:0;font-size:inherit;opacity:1;outline:0;padding:0;color:inherit"
                    tabindex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style="position:absolute;top:0;left:0;visibility:hidden;height:0;overflow:scroll;white-space:pre"
                  />
                </div>
              </div>
            </div>
            <div
              class=" css-1hb7zxy-IndicatorsContainer"
            >
              <span
                class=" css-43ykx9-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                class=" css-1fi275-indicatorContainer"
              >
                <svg
                  aria-hidden="true"
                  class="Icon-fc7twp-0 TimePicker__StyledTimeIcon-sc-1r3kwxy-0 ZhxHr"
                  color="currentColor"
                  fill="currentColor"
                  focusable="false"
                  height="22px"
                  icon="queryBuilder"
                  viewBox="0 0 24 24"
                  width="22px"
                >
                  <path
                    d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TimeRange with min and max time range 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <label
      class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy FieldLabel-sc-1t1cp4f-1 kbOEDh"
      color="#011e38"
      style="display:block"
    >
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
      >
        <span
          style="font-size:14px;font-weight:600;line-height:1.71428571"
        >
          Time range
        </span>
      </div>
    </label>
    <div
      class="Box-sc-1qu1edy-0 jNUqkq"
      display="inline-flex"
    >
      <div
        class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 lhNPaq"
      >
        <div
          class="nds-time-picker css-2b097c-container"
        >
          <div
            class=" css-1liu8yu-Control"
          >
            <div
              class=" css-7zc8my"
            >
              <div
                class=" css-1yhx6vz-Placeholder"
              >
                HH:MM
              </div>
              <div
                class="css-17yls17-Input"
              >
                <div
                  class=""
                  style="display:inline-block"
                >
                  <input
                    aria-autocomplete="list"
                    aria-label="Select a start time"
                    autocapitalize="none"
                    autocomplete="off"
                    autocorrect="off"
                    id="react-select-44-input"
                    spellcheck="false"
                    style="box-sizing:content-box;width:1px;label:input;background:0;border:0;font-size:inherit;opacity:1;outline:0;padding:0;color:inherit"
                    tabindex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style="position:absolute;top:0;left:0;visibility:hidden;height:0;overflow:scroll;white-space:pre"
                  />
                </div>
              </div>
            </div>
            <div
              class=" css-1hb7zxy-IndicatorsContainer"
            >
              <span
                class=" css-43ykx9-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                class=" css-1fi275-indicatorContainer"
              >
                <svg
                  aria-hidden="true"
                  class="Icon-fc7twp-0 TimePicker__StyledTimeIcon-sc-1r3kwxy-0 ZhxHr"
                  color="currentColor"
                  fill="currentColor"
                  focusable="false"
                  height="22px"
                  icon="queryBuilder"
                  viewBox="0 0 24 24"
                  width="22px"
                >
                  <path
                    d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 fCVEij"
      >
        <p
          class="Text-sc-1wu7vpu-0 jRzHjr"
          color="currentColor"
          font-size="16px"
        >
          -
        </p>
      </div>
      <div
        class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 lhNPaq"
      >
        <div
          class="nds-time-picker css-2b097c-container"
        >
          <div
            class=" css-1liu8yu-Control"
          >
            <div
              class=" css-7zc8my"
            >
              <div
                class=" css-1yhx6vz-Placeholder"
              >
                HH:MM
              </div>
              <div
                class="css-17yls17-Input"
              >
                <div
                  class=""
                  style="display:inline-block"
                >
                  <input
                    aria-autocomplete="list"
                    aria-label="Select an end time"
                    autocapitalize="none"
                    autocomplete="off"
                    autocorrect="off"
                    id="react-select-45-input"
                    spellcheck="false"
                    style="box-sizing:content-box;width:1px;label:input;background:0;border:0;font-size:inherit;opacity:1;outline:0;padding:0;color:inherit"
                    tabindex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style="position:absolute;top:0;left:0;visibility:hidden;height:0;overflow:scroll;white-space:pre"
                  />
                </div>
              </div>
            </div>
            <div
              class=" css-1hb7zxy-IndicatorsContainer"
            >
              <span
                class=" css-43ykx9-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                class=" css-1fi275-indicatorContainer"
              >
                <svg
                  aria-hidden="true"
                  class="Icon-fc7twp-0 TimePicker__StyledTimeIcon-sc-1r3kwxy-0 ZhxHr"
                  color="currentColor"
                  fill="currentColor"
                  focusable="false"
                  height="22px"
                  icon="queryBuilder"
                  viewBox="0 0 24 24"
                  width="22px"
                >
                  <path
                    d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TimeRange with range validation 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <label
      class="FieldLabel__Label-sc-1t1cp4f-0 eyPSNy FieldLabel-sc-1t1cp4f-1 kbOEDh"
      color="#011e38"
      style="display:block"
    >
      <div
        class="Box-sc-1qu1edy-0 jgHxgc"
      >
        <span
          style="font-size:14px;font-weight:600;line-height:1.71428571"
        >
          Time range
        </span>
      </div>
    </label>
    <div
      class="Box-sc-1qu1edy-0 jNUqkq"
      display="inline-flex"
    >
      <div
        class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 lhNPaq"
      >
        <div
          class="nds-time-picker css-2b097c-container"
        >
          <div
            class=" css-1liu8yu-Control"
          >
            <div
              class=" css-7zc8my"
            >
              <div
                class=" css-1uccc91-singleValue"
              >
                12:00 PM
              </div>
              <div
                class="css-17yls17-Input"
              >
                <div
                  class=""
                  style="display:inline-block"
                >
                  <input
                    aria-autocomplete="list"
                    aria-label="Select a start time"
                    autocapitalize="none"
                    autocomplete="off"
                    autocorrect="off"
                    id="react-select-42-input"
                    spellcheck="false"
                    style="box-sizing:content-box;width:1px;label:input;background:0;border:0;font-size:inherit;opacity:1;outline:0;padding:0;color:inherit"
                    tabindex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style="position:absolute;top:0;left:0;visibility:hidden;height:0;overflow:scroll;white-space:pre"
                  />
                </div>
              </div>
            </div>
            <div
              class=" css-1hb7zxy-IndicatorsContainer"
            >
              <span
                class=" css-43ykx9-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                class=" css-1fi275-indicatorContainer"
              >
                <svg
                  aria-hidden="true"
                  class="Icon-fc7twp-0 TimePicker__StyledTimeIcon-sc-1r3kwxy-0 ZhxHr"
                  color="currentColor"
                  fill="currentColor"
                  focusable="false"
                  height="22px"
                  icon="queryBuilder"
                  viewBox="0 0 24 24"
                  width="22px"
                >
                  <path
                    d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 fCVEij"
      >
        <p
          class="Text-sc-1wu7vpu-0 jRzHjr"
          color="currentColor"
          font-size="16px"
        >
          -
        </p>
      </div>
      <div
        class="Box-sc-1qu1edy-0 Field-sc-1lebjra-0 lhNPaq"
      >
        <div
          class="nds-time-picker css-2b097c-container"
        >
          <div
            class=" css-1liu8yu-Control"
          >
            <div
              class=" css-7zc8my"
            >
              <div
                class=" css-1uccc91-singleValue"
              >
                03:30 AM
              </div>
              <div
                class="css-17yls17-Input"
              >
                <div
                  class=""
                  style="display:inline-block"
                >
                  <input
                    aria-autocomplete="list"
                    aria-label="Select an end time"
                    autocapitalize="none"
                    autocomplete="off"
                    autocorrect="off"
                    id="react-select-43-input"
                    spellcheck="false"
                    style="box-sizing:content-box;width:1px;label:input;background:0;border:0;font-size:inherit;opacity:1;outline:0;padding:0;color:inherit"
                    tabindex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style="position:absolute;top:0;left:0;visibility:hidden;height:0;overflow:scroll;white-space:pre"
                  />
                </div>
              </div>
            </div>
            <div
              class=" css-1hb7zxy-IndicatorsContainer"
            >
              <span
                class=" css-43ykx9-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                class=" css-1fi275-indicatorContainer"
              >
                <svg
                  aria-hidden="true"
                  class="Icon-fc7twp-0 TimePicker__StyledTimeIcon-sc-1r3kwxy-0 ZhxHr"
                  color="currentColor"
                  fill="currentColor"
                  focusable="false"
                  height="22px"
                  icon="queryBuilder"
                  viewBox="0 0 24 24"
                  width="22px"
                >
                  <path
                    d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
